--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 .vscode/
+.old-website/
+
+# Next.js
+/next-app/.next/
+/next-app/out/
+/next-app/node_modules/
+/next-app/.env
+/next-app/.env.local
+/next-app/.env.development.local
+/next-app/.env.test.local
+/next-app/.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS specific
+.DS_Store
