--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "@vercel/speed-insights": "^1.0.10",
+    "chart.js": "^4.4.8",
     "next": "^15.2.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0"
   }
 }
