--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,39 @@
-.vscode/
-.old-website/
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
 
 # Next.js
-.next/
-out/
-node_modules/
+/.next/
+/out/
+
+# Production
+/build
+
+# Environment files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Logs
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS specific
+# Misc
 .DS_Store
+*.pem
+
+# IDE
+.idea
+.vscode
+*.swp
+*.swo
+
+# Old website
+.old-website/
