--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@vercel/speed-insights": "^1.2.0",
     "chart.js": "^4.4.8",
     "next": "^15.2.4",
+    "posthog-js": "^1.255.1",
+    "posthog-node": "^5.1.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1"
