--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate-data": "ts-node --project scripts/tsconfig.json scripts/migrate-data.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "chart.js": "^4.4.8",
+    "dotenv": "^17.2.1",
     "next": "^15.2.4",
     "posthog-js": "^1.255.1",
     "posthog-node": "^5.1.1",
@@ -27,8 +29,12 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
+    "@types/react": "^18.3.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.16"
+    "tailwindcss": "^4.0.16",
+    "ts-node": "^10.9.2",
+    "typescript": "5.9.2"
   }
 }
