--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/node": "^24.3.0",
     "@types/react": "^18.3.1",
     "autoprefixer": "^10.4.21",
+    "eslint": "9.35.0",
+    "eslint-config-next": "15.5.3",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.16",
     "ts-node": "^10.9.2",
