--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "chart.js": "^4.4.8",
     "dotenv": "^17.2.1",
+    "lucide-react": "^0.553.0",
     "next": "^15.5.2",
     "posthog-js": "^1.255.1",
     "posthog-node": "^5.1.1",
