--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@stripe/stripe-js": "^6.1.0",
+    "@strapi/strapi": "^5.31.2",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.0",
     "@vercel/analytics": "^1.5.0",
