--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@stripe/stripe-js": "^6.1.0",
     "@strapi/strapi": "^5.31.2",
+    "@stripe/stripe-js": "^6.1.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.0",
     "@vercel/analytics": "^1.5.0",
@@ -34,7 +34,7 @@
     "@types/node": "^24.3.0",
     "@types/react": "^18.3.1",
     "autoprefixer": "^10.4.21",
-    "eslint": "9.35.0",
+    "eslint": "^9.35.0",
     "eslint-config-next": "15.5.3",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.16",
