--- a/package.json
+++ b/package.json
@@ -20,16 +20,25 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "chart.js": "^4.4.8",
+    "cheerio": "^1.1.2",
     "dotenv": "^17.2.1",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.553.0",
     "next": "^15.5.2",
+    "next-mdx-remote": "^5.0.0",
     "posthog-js": "^1.255.1",
     "posthog-node": "^5.1.1",
+    "prismjs": "^1.30.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "rehype-prism-plus": "^2.0.1",
+    "remark-gfm": "^4.0.1",
+    "turndown": "^7.2.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^24.3.0",
     "@types/react": "^18.3.1",
     "autoprefixer": "^10.4.21",
